build(JEMIL-3) : Fix and added configuration workflow
