# src/main/java/cm/jemil/agency/adapter/outbond/persistence/jpa/entity/ScheduleJpaEntity.java
@@ -1,28 +1,0 @@
-package cm.jemil.agency.adapter.outbond.persistence.jpa.entity;
-
-import jakarta.persistence.*;
-import java.time.LocalDateTime;
-import java.util.UUID;
-import lombok.Getter;
-import lombok.Setter;
-
-@Entity
-@Table(name = "schedules")
-@Getter
-@Setter
-public class ScheduleJpaEntity {
-    @Id
-    private UUID id;
-
-    @Column(nullable = false)
-    private LocalDateTime departureTime;
-
-    @Column(nullable = false)
-    private int totalSeats;
-
-    @Column(nullable = false)
-    private int availableSeats;
-
-    @Version
-    private Long version;
-}
